# musicplayer_with_ai163

./: .gitignore  Cargo.toml  README.md  feature_settings.json  start-api-enhanced.ps1  start-rust-backend.ps1  stop-api-enhanced.ps1
api-enhanced-src/api-enhanced-main/: CHANGELOG.MD  README.MD  package-lock.json  package.json  pnpm-lock.yaml  server.js
api-enhanced-src/api-enhanced-main/.github/workflows/: build-and-pr.yml
api-enhanced-src/api-enhanced-main/module/: comment_add.js  comment_delete.js  comment_reply.js
api-enhanced-src/api-enhanced-main/public/: index.html
api-enhanced-src/api-enhanced-main/public/docs/: home.md  index.html
api-enhanced-src/api-enhanced-main/util/: index.js  request.js
src/: main.rs
static/: admin.html  admin.js  app.js  index.html  styles.css
