[package]
name = "netease-player-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
mime_guess = "2.0"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = "2.5"
tokio = { version = "1", features = ["full"] }
url = "2.5"
urlencoding = "2.1"
